--- a/chendian/templates/blog/article_list.html
+++ b/chendian/templates/blog/article_list.html
@@ -3,6 +3,11 @@
 
 {% block title %}投稿 - {{ block.super }} {% endblock title %}
 
+{% block extra_head %}
+<link href="https://dn-tmp.qbox.me/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
+<link href="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.css" rel="stylesheet"/>
+{% endblock extra_head %}
+
 {% block content %}
 
 <div class="row">
@@ -40,8 +45,9 @@
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
-            <th>ID</th>
             <th>标题</th>
+            <th>分类</th>
+            <th>标签</th>
             <th>作者</th>
             <th>状态</th>
             <th>投递时间</th>
@@ -52,16 +58,25 @@
         <tbody>
           {% for article in page_obj.object_list %}
           <tr>
-            <td>{{ article.id }}</td>
             <td>{{ article.title }}</td>
+            <td>
+              {% for category in article.categories.all %}
+              <span><a class="label label-success" href="?category__name={{ category.name }}">{{ category.name }}</a></span>
+              {% endfor %}
+            </td>
+            <td>
+              {% for tag in article.tags.all %}
+              <span><a class="label label-success" href="?tag__name={{ tag.name }}">{{ tag.name }}</a></span>
+              {% endfor %}
+            </td>
             <td>{{ article.author }}</td>
             <td>{{ article.get_status_display }}</td>
             <td>{{ article.created_at }}</td>
             <td>
               <a href="{% url "frontend:article_detail" pk=article.pk %}">前台页面</a>
-              {# <a class="edit_record" href="javascript: void(0);" #}
-              {#   data-reveal-id="edit_modal" #}
-              {#   data-id="{{ article.pk }}">编辑</a> #}
+              <a class="edit_record" href="javascript: void(0);"
+                data-reveal-id="editPostModal"
+                data-id="{{ article.pk }}">编辑</a>
               <a class="delete_record" href="javascript: void(0);"
                 data-url="{% url "api:blog:article-detail" article.pk %}"
                 data-msg="你确定要删除?" data-method="delete"
@@ -90,117 +105,30 @@
 
   {% include "page.html" %}
 
-  <div class="modal fade" id="edit_modal" tabindex="-1" role="dialog"
-    aria-hidden="true" >
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">编辑书籍信息</h4>
-      </div>
-      <div class="modal-body">
-
-    <div id="edit_form"></div>
-
-    <script id="edit_form_template"  type="x-tmpl-mustache">
-      <form action="#" id="edit_form_post">
-        {% csrf_token %}
-
-      {% verbatim %}
-          <div class="form-group">
-            <label for="name">名称</label>
-            <input class="form-control" type="text" name="name" id="name" value="{{name}}">
-          </div>
-          <div class="form-group">
-            <label for="cover">封面</label>
-            <input class="form-control" type="url" name="cover" id="cover" value="{{cover}}">
-          </div>
-          <div class="form-group">
-            <label for="isbn">ISBN</label>
-            <input class="form-control" type="text" name="isbn" id="isbn" value="{{isbn}}">
-          </div>
-          <div class="form-group">
-            <label for="editDescription">简介备注</label>
-            <textarea class="form-control" rows="3" name="description"
-            id="editDescription">{{description}}</textarea>
-          </div>
-          <div class="form-group">
-            <label for="douban_url">豆瓣链接</label>
-            <input class="form-control" type="text" name="douban_url" id="douban_url" value="{{douban_url}}">
-          </div>
-
-        {% endverbatim %}
-
-    </form>
-  </script>
-
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <a class="btn btn-primary" id="post_edit_form" data-id="0"
-        href="javascript: void(0);">保存</a>
-    </div>
-
-  </div>
-  </div>
-</div>
-</div>
-
-
   {% endblock content %}
 
-
+  {% block footer %}
+    {% include "blog/article_edit_form.html" %}
+  {% endblock footer %}
 
   {% block extra_js %}
+  <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
+  <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
+  <script src="https://dn-tmp.qbox.me/summernote-0.6.9/lang/summernote-zh-CN.js"></script>
+  <script src="{{ STATIC_URL }}js/frontend/normal/admin_article_edit-c10ceb9f93.js"></script>
+
   <script>
     $(function(){
-
-      // 载入 form
-      function loadEditForm(id) {
-        var url = "{% url "api:blog:article-detail" 0 %}".replace("0", id);
-        $("#edit_form").html("loading....");
-        $.get(url, function(record) {
-          var template = $("#edit_form_template").html();
-          var rendered = Mustache.render(template, record);
-          $("#edit_form").html(rendered);
-          $("#post_edit_form").data("id", id);
-        });
-      };
-
-      // modal
-      $(".edit_record").on("click", function() {
-        var id = $(this).data("id");
-        loadEditForm(id);
-        $("#edit_modal").modal("show");
-      });
-
-      // post form
-      $("#post_edit_form").on("click", function() {
-        var id = $(this).data("id");
-        var jsonData = {}
-        $("#edit_form_post").serializeArray().map(function(item) {
-          jsonData[item.name] = item.value;
-        });
-        jsonData = JSON.stringify(jsonData);
-        var url = "{% url "api:blog:article-detail" 0 %}".replace("0", id);
-        $.ajax({
-          type: "PUT",
-          url: url,
-          data: jsonData,
-          dataType: "json",
-          contentType : "application/json",
-          success: function(data) {
-            location.reload();
-          }
-        });
-      });
-
       handler = function() {
         lazyClickHandler.bind(this)();
       };
+
       // delete
       $(".delete_record").on("click", handler);
+
       // approve
       $('.approve_record').on('click', handler);
+
       // disapprove
       $('.disapprove_record').on('click', handler);
 
