--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -108,53 +108,7 @@
     <script src="https://dn-tmp.qbox.me/chendian/libs/mustache.min.js"></script>
     <script src="https://dn-tmp.qbox.me/js-xss.v0.2.2.min.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/utils-44b7f01bd7.js"></script>
-    <script>
-      $(document).ready(function() {
-        $("#datetime_start").datetimepicker({
-          format: "Y-m-d H:i",
-          defaultTime: "00:00"
-        });
-
-        $("#datetime_end").datetimepicker({
-          format: "Y-m-d H:i",
-          defaultTime: "00:00"
-        });
-
-      });
-
-      // using jQuery
-      function getCookie(name) {
-          var cookieValue = null;
-          if (document.cookie && document.cookie != '') {
-              var cookies = document.cookie.split(';');
-              for (var i = 0; i < cookies.length; i++) {
-                  var cookie = jQuery.trim(cookies[i]);
-                  // Does this cookie string begin with the name we want?
-                  if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                      cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                      break;
-                  }
-              }
-          }
-          return cookieValue;
-      }
-      var csrftoken = getCookie('csrftoken');
-      function csrfSafeMethod(method) {
-          // these HTTP methods do not require CSRF protection
-          return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-      }
-      $.ajaxSetup({
-          {# dateType: 'json', #}
-          {# contentType: 'application/json', #}
-          beforeSend: function(xhr, settings) {
-              if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                  xhr.setRequestHeader("X-CSRFToken", csrftoken);
-              }
-          }
-      });
-
-      heightlightNav();
-    </script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/admin_base-fd4db35205.js"></script>
 
     {% block extra_js %}{% endblock extra_js %}
 
