书籍详情页面增加百日斩打卡内容

--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -52,9 +52,9 @@
     </div>
 
     <div class="panel panel-default">
-      <div class="panel-heading">百日斩</div>
+      <div class="panel-heading">来自【百日斩】</div>
       <div class="panel-body">
-        <div id="checkin-list">
+        <div id="hundred-goal-notes">
           <div class="loading">
             <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
           </div>
@@ -133,7 +133,8 @@
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-6ae73e0b02.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/book_detail-0c6017614e.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/book_hundred_goal_notes-92ea9a1a4b.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_detail-e965347220.js"></script>
 {% if request.user.is_authenticated %}
 <script src="{{ STATIC_URL }}js/frontend/normal/book_edit-bfccb11d19.js"> </script>
 {% endif %}
