--- a/chendian/templates/member/index.html
+++ b/chendian/templates/member/index.html
@@ -94,7 +94,7 @@
               </a>
             </th>
 
-            <th>备注</th>
+            <th>个人简介</th>
             <th>查看</th>
             <th>操作</th>
           </tr>
