--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -4,7 +4,8 @@
 <div class="col-md-4 col-md-offset-4 search-box">
   <form class="form-inline" action="/b/">
     <div class="form-group">
-      <input type="text" class="form-control" name="name" placeholder="请输入书籍名称"
+      <input type="text" class="form-control" name="name"
+       placeholder="书名/作者/ISBN"
        value="{{ request.GET.name }}">
     </div>
     <button type="submit" class="btn btn-primary">喵~</button>
