--- a/chendian/templates/login.html
+++ b/chendian/templates/login.html
@@ -13,7 +13,7 @@
 {% block content %}
 <form class="form-login" method="post">
   <fieldset>
-    <legend><h2>请登录</h2></legend>
+    <legend><h2>登录书会帐号</h2></legend>
   </fieldset>
   {% csrf_token %}
 
