--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -2,11 +2,17 @@
 
 {% block content %}
 <div class="col-md-4 col-md-offset-4 search-box">
+  {% if request.GET.tags__name %}
+  <p>标签：{{ request.GET.tags__name }}</p>
+  {% endif %}
   <form class="form-inline" action="/b/">
     <div class="form-group">
       <input type="text" class="form-control" name="name"
        placeholder="书名/作者/ISBN"
        value="{{ request.GET.name }}">
+       {% if request.GET.tags__name %}
+         <input type="hidden" name="tags__name" value="{{ request.GET.tags__name}}">
+       {% endif %}
     </div>
     <button type="submit" class="btn btn-primary">喵~</button>
   </form>
