通过豆瓣 API 更新 book.tags

--- a/chendian/static/css/src/site.scss
+++ b/chendian/static/css/src/site.scss
@@ -115,6 +115,11 @@ body {
     height: 262px;
   }
 
+  .tags,
+  .tags ul {
+    padding-left: 0;
+  }
+
   .description {
     text-indent: 2em;
   }
