调整百日斩记录在书籍详情页面的显示位置(4:4:4)

--- a/chendian/static/css/src/site.scss
+++ b/chendian/static/css/src/site.scss
@@ -111,12 +111,11 @@ body {
 
 .book-info {
   .cover img {
-    width: 182px;
-    height: 262px;
+    width: 150px;
+    height: 220px;
   }
 
-  .tags,
-  .tags ul {
+  .tags {
     padding-left: 0;
   }
 
