--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="row book-detail">
-  <div class="col-md-5">
+  <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-heading">
       {% if request.user.is_authenticated %}
@@ -38,9 +38,10 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="col-md-7 checkin-list">
+  </div> <!-- .col-md-4 -->
+
+  <div class="col-md-4 checkin-list">
     <div class="panel panel-default">
       <div class="panel-heading">有 <span class="text-right" id="reader-count">0</span> 个小伙伴阅读过本书</div>
       <div class="panel-body">
@@ -53,6 +54,9 @@
       <div class="panel-footer clearfix"></div>
     </div>
 
+  </div>  <!-- .col-md-4 -->
+
+  <div class="col-md-4 checkin-list">
     <div class="panel panel-default">
       <div class="panel-heading">来自【百日斩】</div>
       <div class="panel-body">
@@ -64,8 +68,7 @@
       </div>
       <div class="panel-footer clearfix"></div>
     </div>
-
-  </div>
+  </div>  <!-- .col-md-4 -->
 
 </div>
 
@@ -135,7 +138,7 @@
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-6ae73e0b02.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/book_hundred_goal_notes-92ea9a1a4b.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_hundred_goal_notes-4d30f6da2b.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/book_detail-5139924171.js"></script>
 {% if request.user.is_authenticated %}
 <script src="{{ STATIC_URL }}js/frontend/normal/book_edit-bfccb11d19.js"> </script>
