--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -10,8 +10,8 @@
 
 
 {% block content %}
-<div class="row book-detail">
-  <div class="col-md-4">
+<div class="row">
+  <div class="col-md-4 book-detail">
     <div class="panel panel-default">
       <div class="panel-heading">
       {% if request.user.is_authenticated %}
@@ -56,7 +56,7 @@
 
   </div>  <!-- .col-md-4 -->
 
-  <div class="col-md-4 checkin-list">
+  <div class="col-md-4 hundred-goal-note-list">
     <div class="panel panel-default">
       <div class="panel-heading">来自【百日斩】</div>
       <div class="panel-body">
@@ -138,7 +138,7 @@
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-6ae73e0b02.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/book_hundred_goal_notes-4d30f6da2b.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_hundred_goal_notes-355fc0a981.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/book_detail-5139924171.js"></script>
 {% if request.user.is_authenticated %}
 <script src="{{ STATIC_URL }}js/frontend/normal/book_edit-bfccb11d19.js"> </script>
