--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -1,5 +1,9 @@
 {% extends "frontend/base.html" %}
 
+{% block extra_head %}
+  <link rel="stylesheet" href="{{ STATIC_URL }}libs/bower_components/webui-popover/dist/jquery.webui-popover.min.css" />
+{% endblock extra_head %}
+
 {% block content %}
 <div class="col-md-4 col-md-offset-4 search-box">
   {% if request.GET.tags__name %}
@@ -28,5 +32,6 @@
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}libs/bower_components/lazysizes/lazysizes.min.js"></script>
-<script src="{{ STATIC_URL }}js/frontend/book_list-fa18e0ee9e.js"> </script>
+<script src="{{ STATIC_URL }}libs/bower_components/webui-popover/dist/jquery.webui-popover.min.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/book_list-f7fc091f53.js"> </script>
 {% endblock extra_js %}
