--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -73,6 +73,23 @@
         <div class="panel-footer clearfix"></div>
       </div>
     </div>
+
+    <div class="col-md-4"></div>
+
+    <div class="col-md-8 checkin-counts">
+      <div class="panel panel-default">
+        <div class="panel-heading">连续打卡次数</div>
+        <div class="panel-body">
+          <div id="checkin-count">
+            <div class="loading">
+              <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="panel-footer clearfix"></div>
+      </div>
+    </div>
+
 </div>
 
 <div class="modal fade bs-edit-member-modal-lg" tabindex="-1" role="dialog"
@@ -122,7 +139,8 @@
 
 
 {% block extra_js %}
+<script src="https://dn-tmp.qbox.me/chendian/static/libs/bower_components/calendar_heatmap/calendar_heatmap.bundle.js"></script>
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-6ae73e0b02.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/member_detail-a2887cee64.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/member_detail-e2119eba7b.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/normal/member_edit-f787a98e3d.js"> </script>
 {% endblock extra_js %}
