--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -1,12 +1,15 @@
 {% extends "frontend/base.html" %}
 
 {% block extra_head %}
+
+<link rel="stylesheet" href="{{ STATIC_URL }}libs/bower_components/calendar_heatmap/src/calendar-heatmap.css" />
 <style>
+  .calendar-heatmap {
+    box-sizing: initial;
+    height: 140px !important;
+  }
   .file-preview {
     border: 0;
-  }
-  .checkin-counts {
-    font-family: "Lato", sans-serif;
   }
 </style>
 {% endblock extra_head %}
@@ -77,9 +80,9 @@
       </div>
     </div>
 
-    {# <div class="col-md-4"></div> #}
+    <div class="col-md-4"></div>
 
-    <div class="col-md-12 checkin-counts">
+    <div class="col-md-8 checkin-counts">
       <div class="panel panel-default">
         <div class="panel-heading">连续打卡次数</div>
         <div class="panel-body">
@@ -142,9 +145,11 @@
 
 
 {% block extra_js %}
-<script src="https://dn-tmp.qbox.me/chendian/static/libs/bower_components/calendar_heatmap/calendar_heatmap.bundle.js"></script>
+<script src="{{ STATIC_URL }}libs/bower_components/d3/d3.min.js"></script>
+<script src="{{ STATIC_URL }}libs/bower_components/moment/min/moment.min.js"></script>
+<script src="{{ STATIC_URL }}libs/bower_components/calendar_heatmap/src/calendar-heatmap.js"></script>
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-6ae73e0b02.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/member_detail-3286a0f37b.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/normal/member_edit-f787a98e3d.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/normal/member_checkin_counts-be081fe041.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/member_detail-b89f72eebd.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/normal/member_edit-5e7afe3967.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/normal/member_checkin_counts-d3606bfe6c.js"> </script>
 {% endblock extra_js %}
