--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -49,6 +49,7 @@
           <li><a href="{% url "frontend:article_list" %}">文章</a></li>
           <li><a href="{% url "frontend:book_list" %}">书籍</a></li>
           <li><a href="{% url "frontend:member_list" %}">成员</a></li>
+          <li><a href="{% url "frontend:year_2016" %}">2016</a></li>
           <li><a href="{% url "frontend:feedback" %}">吐槽</a></li>
 
           {% if request.user.is_authenticated %}
