--- a/chendian/templates/frontend/year_summarize.html
+++ b/chendian/templates/frontend/year_summarize.html
@@ -2,13 +2,13 @@
 
 
 {% block content %}
-<div class="row year-top" data-year="2016"
+<div class="row year-top" data-year="{{ year }}"
 {% if request.user.is_authenticated %} data-member-id="{{ request.user.member.id }}" {% endif %}
 >
 
     <div class="col-md-4 year-top-books">
       <div class="panel panel-default">
-        <div class="panel-heading">2016 年书籍的读者数（TOP 20）</div>
+        <div class="panel-heading">{{ year }} 年书籍的读者数（TOP 20）</div>
         <div class="panel-body">
           <div id="year-top-books">
             <div class="loading">
@@ -22,7 +22,7 @@
 
     <div class="col-md-4 year-top-readers">
       <div class="panel panel-default">
-        <div class="panel-heading">2016 年各人阅读的书籍数量（TOP 20）</div>
+        <div class="panel-heading">{{ year }} 年各人阅读的书籍数量（TOP 20）</div>
         <div class="panel-body">
           <div id="year-top-readers">
             <div class="loading">
@@ -37,7 +37,7 @@
 
     <div class="col-md-4 year-mine-books">
       <div class="panel panel-default">
-        <div class="panel-heading">2016 年我读过的书<span id="mine-book-count"></span></div>
+        <div class="panel-heading">{{ year }} 年我读过的书<span id="mine-book-count"></span></div>
         <div class="panel-body">
           <div id="year-mine-books">
             <div class="loading">
@@ -54,5 +54,5 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/year_2016-16bacedf1c.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/year_summarize-16bacedf1c.js"> </script>
 {% endblock extra_js %}
